# finegui

./: CMakeLists.txt  finegui-design.md
docs/: CHECKLIST.md  SKIN_SYSTEM_PLAN.md  USER_GUIDE.md  USER_GUIDE_LLM.md  gui_examples_design.md  input_event_design.md  theming_design.md
examples/: CMakeLists.txt  retained_demo.cpp  script_demo.cpp  simple_demo.cpp
include/finegui/: drag_drop_manager.hpp  finegui.hpp  gui_config.hpp  gui_draw_data.hpp  gui_renderer.hpp  gui_state.hpp  gui_system.hpp  hotkey_manager.hpp  input_adapter.hpp  map_renderer.hpp  scene_texture.hpp  script_bindings.hpp  script_gui.hpp  script_gui_manager.hpp  texture_handle.hpp  texture_registry.hpp  tween_manager.hpp  widget_converter.hpp  widget_node.hpp  widget_state.hpp
src/: gui_system.cpp  input_adapter.cpp  scene_texture.cpp  state_dispatcher.cpp  texture_registry.cpp
src/backend/: imgui_impl_finevk.cpp  imgui_impl_finevk.hpp
src/retained/: drag_drop_manager.cpp  gui_renderer.cpp  hotkey_manager.cpp  tween_manager.cpp  widget_node.cpp
src/script/: map_renderer.cpp  script_bindings.cpp  script_gui.cpp  script_gui_manager.cpp  widget_converter.cpp
src/shaders/: gui.frag  gui.vert
tests/: CMakeLists.txt  test_phase1.cpp  test_phase2.cpp  test_retained_render.cpp  test_retained_unit.cpp  test_script_render.cpp  test_script_unit.cpp
